--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<title>HTML Clean Up Lab</title>
+<<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>HTML Clean Up Lab</title>
 </head>
 <body>
  	<div id="page-wrapper">
@@ -7,7 +10,7 @@
 		  <img src="logo3.png" alt="a logo of the page">
 		</a>
 		<h1>My Demo Site</h1>
-	  </header> 
+	  </header>
 	  <nav id="main-nav">
 		<ul>
 		  <li><a href="http://www.iit.edu">IIT Home</a></li>
