--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  	<div id="page-wrapper">
 	  <header id="header">
 		<a id="logo1" href="index.html">
-		  <img src="logo3.png" alt="a logo of the page">
+		  <img src="logo3.png" alt="a logo of ACME">
 		</a>
 		<h1>My Demo Site</h1>
 	  </header>
@@ -23,7 +23,7 @@
 	  <main id="content-wrapper">
 			<div id="main-content">
 				<h2><strong>This is our h2 Tag</strong></h2>
-				<img class="imageR" src="main.png">
+				<img class="imageR" src="main.png" alt="a logo of Main Squeeze Juice Co.">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
